# bitsudoku

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  board.cpp  board.hpp  error.txt  filemanip.hpp  generate.sh  generator.cpp  generator.hpp  main.cpp  note  solver.cpp  solver.hpp  sudokugen.cpp  test.cpp
problems/16x16/: hard.txt
problems/9x9/: convert.py  minhints.txt
